Removed overflow-y as it caused some issues

--- a/src/app/projects-page/projects-page.component.scss
+++ b/src/app/projects-page/projects-page.component.scss
@@ -1,7 +1,6 @@
 html, body {
   max-width: 100vw !important;
   overflow-x: hidden !important;
-  overflow-y: scroll !important;
 }
 
 .header {
